tests/snapshots/parser_snapshots__parser_all@ast-124.snap
---
source: tests/parser_snapshots.rs
assertion_line: 19
expression: ast
input_file: examples/spec/12_control_flow/for_loop.of
---
Err(
    "unexpected token 'for'",
)
