tests/snapshots/parser_snapshots__parser_all@ast-125.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/14_ffi/extern_struct.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "MyCFunctionArgs",
                        is_extern: true,
                        generics: [],
                        fields: [
                            FieldDecl {
                                name: "flags",
                                ty: Primitive(
                                    Int32,
                                ),
                                is_pointer: false,
                            },
                            FieldDecl {
                                name: "name",
                                ty: Primitive(
                                    String,
                                ),
                                is_pointer: true,
                            },
                        ],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 14,
                    len: 6,
                },
            },
        ],
    },
)
