tests/snapshots/parser_snapshots__parser_all@ast-126.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/14_ffi/pinning_example.of
---
Err(
    "unexpected token '*'",
)
