tests/snapshots/parser_snapshots__parser_all@ast-128.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p2_bound_must_be_interface.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "Bar",
                        is_extern: false,
                        generics: [],
                        fields: [],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Struct(
                    StructDecl {
                        name: "Foo",
                        is_extern: false,
                        generics: [
                            GenericParam {
                                name: "T",
                                bounds: [
                                    Named(
                                        "Bar",
                                        [],
                                    ),
                                ],
                            },
                        ],
                        fields: [],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 2,
                    col: 7,
                    len: 6,
                },
            },
        ],
    },
)
