tests/snapshots/parser_snapshots__parser_all@ast-13.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/13_null.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Import(
                    ImportDecl {
                        module: "of:core",
                        symbols: Named(
                            [
                                ImportSymbol {
                                    name: "print",
                                    alias: None,
                                },
                            ],
                        ),
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "find_user",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: Some(
                            Union(
                                [
                                    Primitive(
                                        String,
                                    ),
                                    Primitive(
                                        Null,
                                    ),
                                ],
                            ),
                        ),
                        params: [
                            ParamDecl {
                                name: "id",
                                ty: Primitive(
                                    Int64,
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [],
                                returns: Some(
                                    If(
                                        BinaryOp(
                                            Variable(
                                                "id",
                                            ),
                                            Eq,
                                            Literal(
                                                Int(
                                                    "1",
                                                ),
                                            ),
                                        ),
                                        Block {
                                            statements: [],
                                            returns: Some(
                                                Literal(
                                                    String(
                                                        "Admin",
                                                    ),
                                                ),
                                            ),
                                        },
                                        Some(
                                            Block {
                                                statements: [],
                                                returns: Some(
                                                    If(
                                                        BinaryOp(
                                                            Variable(
                                                                "id",
                                                            ),
                                                            Eq,
                                                            Literal(
                                                                Int(
                                                                    "2",
                                                                ),
                                                            ),
                                                        ),
                                                        Block {
                                                            statements: [],
                                                            returns: Some(
                                                                Literal(
                                                                    String(
                                                                        "Guest",
                                                                    ),
                                                                ),
                                                            ),
                                                        },
                                                        Some(
                                                            Block {
                                                                statements: [],
                                                                returns: Some(
                                                                    Literal(
                                                                        Null,
                                                                    ),
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                ),
                            },
                        ),
                        span: Span {
                            line: 3,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 3,
                    col: 9,
                    len: 8,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "greet",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: Some(
                            Primitive(
                                String,
                            ),
                        ),
                        params: [
                            ParamDecl {
                                name: "id",
                                ty: Primitive(
                                    Int64,
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [
                                    VarDecl(
                                        "user",
                                        None,
                                        Some(
                                            Call(
                                                Variable(
                                                    "find_user",
                                                ),
                                                [],
                                                [
                                                    Variable(
                                                        "id",
                                                    ),
                                                ],
                                            ),
                                        ),
                                    ),
                                ],
                                returns: Some(
                                    If(
                                        Is(
                                            Variable(
                                                "user",
                                            ),
                                            Primitive(
                                                Null,
                                            ),
                                        ),
                                        Block {
                                            statements: [],
                                            returns: Some(
                                                BinaryOp(
                                                    Literal(
                                                        String(
                                                            "no user with id ",
                                                        ),
                                                    ),
                                                    Add,
                                                    As(
                                                        Variable(
                                                            "id",
                                                        ),
                                                        Primitive(
                                                            String,
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        },
                                        Some(
                                            Block {
                                                statements: [],
                                                returns: Some(
                                                    BinaryOp(
                                                        Literal(
                                                            String(
                                                                "hello, ",
                                                            ),
                                                        ),
                                                        Add,
                                                        As(
                                                            Variable(
                                                                "user",
                                                            ),
                                                            Primitive(
                                                                String,
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                ),
                            },
                        ),
                        span: Span {
                            line: 13,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 13,
                    col: 9,
                    len: 8,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "main",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: Some(
                            Primitive(
                                Int64,
                            ),
                        ),
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    Expr(
                                        Call(
                                            Variable(
                                                "print",
                                            ),
                                            [],
                                            [
                                                Call(
                                                    Variable(
                                                        "greet",
                                                    ),
                                                    [],
                                                    [
                                                        Literal(
                                                            Int(
                                                                "1",
                                                            ),
                                                        ),
                                                    ],
                                                ),
                                            ],
                                        ),
                                    ),
                                    Expr(
                                        Call(
                                            Variable(
                                                "print",
                                            ),
                                            [],
                                            [
                                                Call(
                                                    Variable(
                                                        "greet",
                                                    ),
                                                    [],
                                                    [
                                                        Literal(
                                                            Int(
                                                                "2",
                                                            ),
                                                        ),
                                                    ],
                                                ),
                                            ],
                                        ),
                                    ),
                                    Expr(
                                        Call(
                                            Variable(
                                                "print",
                                            ),
                                            [],
                                            [
                                                Call(
                                                    Variable(
                                                        "greet",
                                                    ),
                                                    [],
                                                    [
                                                        Literal(
                                                            Int(
                                                                "99",
                                                            ),
                                                        ),
                                                    ],
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                                returns: Some(
                                    Literal(
                                        Int(
                                            "0",
                                        ),
                                    ),
                                ),
                            },
                        ),
                        span: Span {
                            line: 22,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 22,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
