tests/snapshots/parser_snapshots__parser_all@ast-130.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/14_ffi/pointer_syntax.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "hashmap_set",
                        has_self_param: false,
                        is_extern: true,
                        generics: [],
                        return_type: None,
                        params: [
                            ParamDecl {
                                name: "key",
                                ty: Primitive(
                                    String,
                                ),
                                is_pointer: true,
                            },
                            ParamDecl {
                                name: "value",
                                ty: Named(
                                    "MyStruct",
                                    [],
                                ),
                                is_pointer: true,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 16,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 16,
                    len: 8,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "hashmap_set_generic",
                        has_self_param: false,
                        is_extern: true,
                        generics: [
                            GenericParam {
                                name: "T",
                                bounds: [],
                            },
                        ],
                        return_type: None,
                        params: [
                            ParamDecl {
                                name: "key",
                                ty: Primitive(
                                    String,
                                ),
                                is_pointer: true,
                            },
                            ParamDecl {
                                name: "value",
                                ty: Named(
                                    "T",
                                    [],
                                ),
                                is_pointer: true,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 2,
                            col: 16,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 2,
                    col: 16,
                    len: 8,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "malloc",
                        has_self_param: false,
                        is_extern: true,
                        generics: [],
                        return_type: Some(
                            Pointer(
                                Named(
                                    "Buffer",
                                    [],
                                ),
                            ),
                        ),
                        params: [
                            ParamDecl {
                                name: "size",
                                ty: Primitive(
                                    Uint64,
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 3,
                            col: 16,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 3,
                    col: 16,
                    len: 8,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "malloc_nullable",
                        has_self_param: false,
                        is_extern: true,
                        generics: [],
                        return_type: Some(
                            Union(
                                [
                                    Pointer(
                                        Named(
                                            "Buffer",
                                            [],
                                        ),
                                    ),
                                    Primitive(
                                        Null,
                                    ),
                                ],
                            ),
                        ),
                        params: [
                            ParamDecl {
                                name: "size",
                                ty: Primitive(
                                    Uint64,
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 4,
                            col: 16,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 4,
                    col: 16,
                    len: 8,
                },
            },
        ],
    },
)
