tests/snapshots/parser_snapshots__parser_all@ast-134.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p1_struct_skeleton_inserted.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "Foo",
                        is_extern: false,
                        generics: [],
                        fields: [],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
        ],
    },
)
