tests/snapshots/parser_snapshots__parser_all@ast-136.snap
---
source: tests/parser_snapshots.rs
assertion_line: 19
expression: ast
input_file: examples/validator/p1_interface_skeleton_inserted.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Interface(
                    InterfaceDecl {
                        name: "Show",
                        generics: [],
                        fields: [],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 10,
                    len: 9,
                },
            },
        ],
    },
)
