tests/snapshots/parser_snapshots__parser_all@ast-137.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p2_unknown_type_errors.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "foo",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: Some(
                            Named(
                                "Nope",
                                [],
                            ),
                        ),
                        params: [],
                        body: Some(
                            Block {
                                statements: [],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
